--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -126,7 +126,7 @@
   </section>
   } @else {
   <div class="text-center py-10">
-    <h2 class="text-2xl font-bold">Carregando produto...</h2>
+    <h2 class="text-2xl font-bold">Loading product...</h2>
   </div>
   }
 </main>
